maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:20: error: not found: value getDirecttion
do {suivre_mur()} while (!(angle==0 && getDirecttion==dir))
                                       ^